# web-design-enhancer

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml  requirements.txt  wde.py
.github/workflows/: ci.yml
adapters/claude-code/: ADAPTER.md
adapters/codex/: ADAPTER.md
adapters/generic/: ADAPTER.md
benchmark/tasks/: catalog.json
data/: getdesign-references.csv
docs/: README.md  V3.md  index.html
examples/dataflow-saas/: DESIGN.md
examples/v3-fixture/: CREATIVE-BRIEF.md  (+2 more)
policies/: web-base.md
references/: beauty-gestures.md  mobile-beauty.md  rationalizations.md  vision-playwright.md
scripts/: aesthetic_review.py  audit_beauty.py  audit_brief.py  audit_declared_antipatterns.py  audit_gestures.py  audit_layout.py  audit_mobile.py  audit_wow.py  check.py  core.py  detect_ai_slop.py  eyes_checklist.py  measure_recall.py  search.py  sync_references.py  validate_design.py  visual_audit.py
skill/: SKILL.md
templates/: creative-brief-template.md  design-md-template.md
tests/: test_aesthetic_calibration.py  test_aesthetic_review.py  test_audit_beauty.py  test_audit_brief.py  test_audit_gestures.py  test_audit_layout_structural.py  test_audit_mobile.py  test_audit_wow.py  test_check_visual_gate.py  test_creative_brief.py  test_detect_domain.py  test_detect_slop_falsepos.py  test_detect_slop_recall.py  test_detect_slop_scoring.py  test_eyes_checklist.py  test_hierarchy_excess.py  test_judge_provenance.py  test_pillar_freshness.py  test_signature_and_tensions.py  test_skill_packaging.py  test_sync_references.py
wde/: __init__.py  __main__.py
(+90 files in other folders)
